# proyecto-poo

./: .gitignore  Cargo.toml  README.md
src/: alumno.rs  carga.rs  lib.rs  main.rs  materia.rs  ui.rs  utils.rs
